--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ authors = ["Your Name <you@example.com>"]
 python = ">=3.10.0,<3.11"
 replit = "^3.2.4"
 Flask = "^2.2.0"
+flask-sqlalchemy = "^3.1.1"
+werkzeug = "^3.1.3"
+reportlab = "^4.4.3"
+flask-mail = "^0.10.0"
+itsdangerous = "^2.2.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
